# MarketTracker

./: main.py  pyproject.toml
crypto_tracker/: constants.py  crypto_api.py  display.py  exceptions.py  main.py
crypto_tracker/components/: favorites_grid.py  keyboard.py  menu_grid.py  top_movers.py
crypto_tracker/config/: settings.py
crypto_tracker/managers/: __init__.py  crypto_manager.py
crypto_tracker/screens/: __init__.py  add_ticker_screen.py  base.py  base_screen.py  dashboard_screen.py  edit_ticker_screen.py  keyboard_screen.py  news_screen.py  settings_screen.py  ticker_screen.py  wallstreet_screen.py
crypto_tracker/services/: asset_manager.py  crypto_api.py  crypto_service.py  crypto_store.py  display.py  event_manager.py  icon_manager.py  news_service.py  screen_manager.py  service_manager.py
crypto_tracker/services/crypto/: coingecko_service.py  crypto_manager.py  crypto_service.py  storage.py  tracked_coins_service.py
crypto_tracker/services/stock/: stock_service.py  stock_storage.py
crypto_tracker/utils/: gesture.py  icon_manager.py  logger.py
src/crypto_tracker/: crypto_api.py  display.py  main.py
