[project]
name = "crypto-tracker"
version = "0.1.0"
description = "A cryptocurrency price tracker for Raspberry Pi with display"
requires-python = ">=3.8"
dependencies = [
    "pygame",
    "binance-connector",
    "python-dotenv",
    "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crypto_tracker"] 